--- a/assets/scss/core/_colors.scss
+++ b/assets/scss/core/_colors.scss
@@ -1,5 +1,6 @@
 $dark-grey-color: #333333;
 $grey-color: #484848;
-$magenta-color: #BA2E8B;
-$blue-color: #2BADFE;
+$magenta-color: #ba2e8b;
+$blue-color: #2badfe;
 $white-color: #fefefe;
+$hover-color: #0095a4;
