--- a/assets/scss/core/_colors.scss
+++ b/assets/scss/core/_colors.scss
@@ -4,3 +4,6 @@ $magenta-color: #ba2e8b;
 $blue-color: #2badfe;
 $white-color: #fefefe;
 $hover-color: #0095a4;
+$primary-color: #3f3f3f;
+$secondary-color: #ecebe4;
+$highlight: #ffffff;
