--- a/assets/scss/core/_fonts.scss
+++ b/assets/scss/core/_fonts.scss
@@ -1,5 +1,5 @@
 $system-font: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
   "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-$primary-font: "Encode Sans Condensed", sans-serif;
 $links: "Teko";
 $titles: "Work Sans", sans-serif;
+$main: "Montserrat", sans-serif;
