--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -134,6 +134,197 @@ nav {
   }
 }
 
+.works {
+  @include breakpoint($small) {
+    margin-top: 9rem;
+    height: 42rem;
+  }
+
+  @include breakpoint($medium) {
+    margin-top: 9rem;
+    height: 42rem;
+  }
+
+  @include breakpoint($large) {
+    margin-top: 9rem;
+    height: 42rem;
+  }
+
+  @include breakpoint($x-large) {
+    margin-top: 12rem;
+    height: 44rem;
+  }
+  p {
+    color: $secondary-color;
+    font-family: $main;
+    font-size: 1.3rem;
+    margin: 3rem 0;
+
+    @include breakpoint($small) {
+      font-size: 1rem;
+    }
+  }
+  .row {
+    /* display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    align-self: center;
+    align-items: center; */
+
+    display: grid;
+    grid-gap: 2rem;
+    grid-auto-rows: minmax(100px, auto);
+
+    @include breakpoint($small) {
+      grid-template-columns: repeat(1, 1fr);
+      grid-gap: 1rem;
+    }
+
+    @include breakpoint($medium) {
+      grid-template-columns: repeat(1, 1fr);
+      grid-gap: 0rem;
+    }
+
+    @include breakpoint($large) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    @include breakpoint($x-large) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    .title {
+      font-family: $titles;
+      color: $highlight;
+      padding: 1rem 0.1rem;
+      font-size: 1.8rem;
+      margin: 2rem 0rem;
+      //display: block;
+      text-decoration: none;
+
+      @include breakpoint($small) {
+        font-size: 1.1rem;
+        margin: 1rem 0rem;
+        width: 100%;
+      }
+
+      @include breakpoint($medium) {
+        font-size: 1.5rem;
+        margin: 0.5rem 0rem;
+        padding: 0.5rem 0.1rem;
+      }
+
+      @include breakpoint($large) {
+        width: 80%;
+      }
+
+      &:hover {
+        background-color: #252525d4;
+      }
+    }
+
+    .col {
+      @include breakpoint($medium) {
+        text-align: center;
+      }
+    }
+
+    .img {
+      display: none;
+
+      img {
+        width: 100%;
+
+        @include breakpoint($medium) {
+          max-width: 440px;
+        }
+
+        @include breakpoint($large) {
+          max-width: 700px;
+        }
+      }
+    }
+  }
+}
+
+.animate {
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+  &:hover {
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
+  }
+}
+
+.show-med {
+  @include breakpoint($medium) {
+    display: block;
+  }
+
+  @include breakpoint($large) {
+    display: none;
+  }
+
+  @include breakpoint($x-large) {
+    display: none;
+  }
+}
+
+.hide-med {
+  @include breakpoint($small) {
+    display: none;
+  }
+
+  @include breakpoint($medium) {
+    display: none;
+  }
+
+  @include breakpoint($large) {
+    display: block;
+  }
+
+  @include breakpoint($x-large) {
+    display: block;
+  }
+}
+
+.show {
+  display: block !important;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
+}
+
+/* .show-lg {
+  @include breakpoint($medium) {
+    display: none;
+  }
+
+  @include breakpoint($large) {
+    display: block;
+  }
+
+  @include breakpoint($x-large) {
+    display: block;
+  }
+}
+
+.hide-lg {
+  @include breakpoint($medium) {
+    display: block;
+  }
+
+  @include breakpoint($large) {
+    display: none;
+  }
+
+  @include breakpoint($x-large) {
+    display: none;
+  }
+} */
+
 footer {
   border-top: $secondary-color solid 0.1rem;
   display: flex;
