--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -77,6 +77,7 @@ nav {
   h1 {
     font-family: $titles;
     font-size: 3rem;
+    line-height: 3.2rem;
     margin-bottom: -1rem;
   }
   h3 {
@@ -131,6 +132,10 @@ nav {
     text-decoration: none;
     font-size: 1.2rem;
     color: $highlight;
+
+    &:hover {
+      color: $hover;
+    }
   }
 }
 
@@ -215,6 +220,9 @@ nav {
       }
 
       @include breakpoint($large) {
+        padding: 1rem 0.1rem;
+        font-size: 1.8rem;
+        margin: 2rem 0rem;
         width: 80%;
       }
 
@@ -243,6 +251,117 @@ nav {
           max-width: 700px;
         }
       }
+    }
+  }
+}
+
+.contact {
+  color: $secondary-color;
+  height: 47rem;
+  margin-top: 9rem;
+
+  @include breakpoint($small) {
+    height: 47rem;
+    margin-top: 6rem;
+  }
+
+  @include breakpoint($medium) {
+    height: 42rem;
+    margin-top: 9rem;
+  }
+
+  @include breakpoint($large) {
+    height: 47rem;
+    margin-top: 9rem;
+  }
+
+  @include breakpoint($x-large) {
+    height: 47rem;
+    margin-top: 9rem;
+  }
+
+  h2 {
+    font-family: $titles;
+    font-size: 2.4rem;
+    line-height: 3rem;
+    margin-bottom: 2rem;
+  }
+
+  .row {
+    display: grid;
+
+    @include breakpoint($small) {
+      grid-gap: 0rem;
+      grid-template-columns: repeat(1, 1fr);
+      grid-auto-rows: minmax(70px, auto);
+    }
+
+    @include breakpoint($medium) {
+      grid-gap: 2rem;
+      grid-template-columns: repeat(2, 1fr);
+      grid-auto-rows: minmax(100px, auto);
+    }
+
+    @include breakpoint($large) {
+      grid-gap: 2rem;
+      grid-template-columns: repeat(2, 1fr);
+      grid-auto-rows: minmax(100px, auto);
+    }
+
+    @include breakpoint($x-large) {
+      grid-gap: 2rem;
+      grid-template-columns: repeat(2, 1fr);
+      grid-auto-rows: minmax(100px, auto);
+    }
+  }
+
+  i {
+    color: #d4d4d47a;
+    padding-right: 0.5rem;
+  }
+
+  span {
+    color: $highlight;
+
+    @include breakpoint($small) {
+      font-size: 0.848rem;
+    }
+
+    @include breakpoint($medium) {
+      font-size: 0.848rem;
+    }
+
+    @include breakpoint($large) {
+      font-size: 1.1rem;
+    }
+
+    @include breakpoint($x-large) {
+      font-size: 1.1rem;
+    }
+  }
+
+  a {
+    color: $highlight;
+    text-decoration: none;
+
+    @include breakpoint($small) {
+      font-size: 0.848rem;
+    }
+
+    @include breakpoint($medium) {
+      font-size: 0.848rem;
+    }
+
+    @include breakpoint($large) {
+      font-size: 1.1rem;
+    }
+
+    @include breakpoint($x-large) {
+      font-size: 1.1rem;
+    }
+
+    &:hover {
+      color: $hover;
     }
   }
 }
@@ -346,6 +465,10 @@ footer {
           font-size: 1rem;
           font-weight: 400;
           text-decoration: none;
+
+          &:hover {
+            color: $hover;
+          }
         }
       }
     }
