--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -115,6 +115,12 @@ nav {
     padding-bottom: 0.9rem;
     padding-top: 1rem;
   }
+  ul {
+    li {
+      line-height: 2.5rem;
+      padding-left: 1rem;
+    }
+  }
 }
 
 .divider {
